# Raspberry-Pi-Pico-project-Template

./: Pico.code-profile
pico-example/: CMakeLists.txt
pico-project-template/: CMakeLists.txt  main.c
pico-sdk/: CMakeCache.txt
